# educational_rag_system

./: .dockerignore  .gitignore  Dockerfile  GRAPH_ARCHITECTURE_CHANGES.md  GUEST_SESSION_ENHANCEMENT_COMPLETE.md  HIERARCHICAL_ARCHITECTURE.md  IMPLEMENTATION_COMPLETE.md  LANGSMITH_INTEGRATION.md  README.md  TESTING_SUMMARY.md  TUTOR_AGENT_FIXES_COMPLETE.md  bashy.bash  check_tables.py  describe_tables.py  example.env  generate_mock_profiles.py  generate_test_profiles.py  ingest_ar_data.py  langgraph.json  main.py  orchestration.py  photosynthesis_unit_ar.json  pyproject.toml  quick_test_tutor.py  requirements.txt  test_QA.py  test_complete_flow.py  test_enhanced_tutor.py  test_fixes.py  test_guest_inference.py  test_guest_sessions.py  test_hierarchy.py  test_personalization.py  test_quiz_flow.py  test_tutor.py  test_tutor_ar.py  test_tutor_repos.py  test_tutoring_detection.py  verify_complete_system.py  verify_fixes.py  (+6 more)
.github/: CODEOWNERS  labeler.yml
.github/workflows/: auto-pr.yml  greetings.yml  labeler.yml  python-package-conda.yml
backend/: config.py
backend/api/: main.py
backend/api/routers/: chat_history.py  sessions.py  tts.py
backend/api/routes/: __init__.py  tutor.py
backend/core/: graph.py  graph_states.py  orchestrator.py
backend/core/ASR/: main.py
backend/core/TTS/: Readme.md  main.py  requirements.txt  text_to_speech_stream.py
backend/core/action_agent/: action_router.py  backend.py  chains.py  intent_classification.py  prompts.py  query_router.py
backend/core/agents/: __init__.py  base_handler.py  content_processor_agent.py  tutor_agent.py
backend/core/builders/: document_builder.py
backend/core/graph/: graph.py
backend/core/nodes/: .chunk_store.py.swp  chat.py  chunk_store.py  chunker.py  db_loader.py  loader.py  qa_generator.py  qa_node.py  retriever_node.py  router.py  summarizer.py
backend/core/ocr_module/: ocr_orchestrator.py  postprocess.py  qari.py  text_detector.py
backend/core/ocr_module./: first_test.ipynb
backend/core/rag/: rag_context_builder.py  rag_orchestrator.py  rag_relevance_checker.py  rag_response_generator.py  rag_retriever.py
backend/core/states/: graph_states.py
backend/core/stratgies/: chat.py  qa_generator.py  summarizer.py
backend/core/stt_dev_seamless/: README.md  example_request.sh  requirements.txt  server.py  test_api_mp3.py
backend/data/stores/: supabase_store.py
backend/database/: db.py  populate_db.py
backend/database/migrations/: add_session_id_to_notes.py  fix_summaries_table.py
backend/database/models/: __init__.py  chunks.py  conversations.py  cpa.py  document.py  learner_interaction.py  learner_profile.py  learning_unit.py  note.py  qa_Item.py  queries.py  questionanswer.py  (+7 more)
backend/db/: connect_db.py
backend/loaders/: base.py  json_loader.py
backend/retrievers/: supabase_store.py
backend/tests/: verify_sessions.py
backend/utils/: conversation_utils.py  langsmith_config.py  language_detection.py  logger_config.py  qa_formatter.py  singleton.py
backend__/core/: graph.py
frontend/: README (2).md  README.md  SETUP.md  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: Navbar.tsx  chat-card.tsx  chat-interface.tsx  chat-sidebar.tsx  hero-buttons.tsx  simple-chat-interface.tsx
frontend/hooks/: use-rag-api.ts
frontend/testsprite_tests/: TC001_Document_Upload___Supported_Formats.py  TC002_Document_Upload___Unsupported_Formats_Rejection.py  TC003_Chat_Interface___Real_time_QA.py  TC004_Chat_Interface___Empty_or_Invalid_Question_Handling.py  TC005_AI_Features___Document_Summarization.py  TC006_AI_Features___CPA_Agent_Processing.py  TC007_UI_Accessibility___Keyboard_Navigation_and_Screen_Reader_Support.py  TC008_Navigation_Bar___Responsiveness_and_Menu_Functionality.py  TC009_Theme_Provider___Dark_and_Light_Mode_Toggle_with_Persistence.py  TC010_RAG_API_Integration___Successful_Document_Upload_and_Query.py  TC011_RAG_API_Integration___Error_Handling_and_Retry_Mechanism.py  TC012_Custom_Hooks___Mobile_Detection_Hook_Functionality.py  TC013_Toast_Notifications___Display_and_Dismissal.py  standard_prd.json  testsprite-mcp-test-report.html  testsprite-mcp-test-report.md  testsprite_frontend_test_plan.json
tests/: README.md  chunk_test.py  conftest.py  manual_test_tutor.py  test_profile_ids.txt  test_repo.py  test_scenarios.txt  test_tutor_agent.py
(+123 files in other folders)
