[project]
name = "educational-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "langchain>=1.1.3",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.1",
    "langdetect>=1.0.9",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pgvector>=0.4.2",
    "protobuf>=6.33.2",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.2",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
]
