[project]
name = "educational-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "accelerate==1.12.0",
    "arabic-reshaper==3.0.0",
    "asyncpg==0.30.0",
    "backports-tarfile==1.2.0",
    "bs4==0.0.2",
    "dotenv>=0.9.9",
    "fastapi==0.119.0",
    "greenlet==3.2.4",
    "importlib-metadata==8.0.0",
    "inflect==7.3.1",
    "ipykernel==7.0.1",
    "jaraco-collections==5.1.0",
    "jaraco-functools==4.3.0",
    "jiwer==4.0.0",
    "langchain>=1.1.3",
    "langchain-classic>=1.0.0",
    "langchain-community==0.3.29",
    "langchain-groq>=1.1.0",
    "langchain-openai>=1.1.1",
    "langdetect==1.0.9",
    "matplotlib==3.10.7",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pandas==2.3.3",
    "pdf2image==1.17.0",
    "pgvector==0.4.1",
    "pip-chill==1.0.3",
    "protobuf>=6.33.2",
    "psycopg2==2.9.10",
    "pypdf2==3.0.1",
    "pytest==8.4.2",
    "python-multipart==0.0.20",
    "sentence-transformers==5.1.0",
    "sentencepiece==0.2.1",
    "soundfile==0.13.1",
    "surya-ocr==0.17.0",
    "tiktoken==0.12.0",
    "tomli==2.0.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec==0.9.0",
    "torchvision>=0.24.1",
    "uvicorn>=0.38.0",
]
