[project]
name = "educational-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "accelerate==1.12.0",
    "alembic>=1.17.2",
    "annotated-types>=0.7.0",
    "anyio>=4.12.0",
    "arabic-reshaper==3.0.0",
    "asttokens>=3.0.1",
    "asyncpg==0.30.0",
    "backports-tarfile==1.2.0",
    "boto3>=1.42.22",
    "botocore>=1.42.22",
    "bs4==0.0.2",
    "certifi>=2025.11.12",
    "charset-normalizer>=3.4.4",
    "colorama>=0.4.6",
    "decorator>=5.2.1",
    "dotenv>=0.9.9",
    "elevenlabs>=2.28.0",
    "exceptiongroup>=1.3.1",
    "executing>=2.2.1",
    "fastapi==0.119.0",
    "greenlet==3.2.4",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.11",
    "importlib-metadata==8.0.0",
    "inflect==7.3.1",
    "ipykernel==7.0.1",
    "ipython>=8.37.0",
    "jaraco-collections==5.1.0",
    "jaraco-functools==4.3.0",
    "jedi>=0.19.2",
    "jiwer==4.0.0",
    "jmespath>=1.0.1",
    "langchain>=1.1.3",
    "langchain-classic>=1.0.0",
    "langchain-community==0.3.29",
    "langchain-groq>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.1",
    "langdetect==1.0.9",
    "librosa>=0.11.0",
    "matplotlib==3.10.7",
    "matplotlib-inline>=0.2.1",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pandas==2.3.3",
    "parso>=0.8.5",
    "pdf2image==1.17.0",
    "pgvector==0.4.1",
    "pip-chill==1.0.3",
    "prompt-toolkit>=3.0.52",
    "protobuf>=6.33.2",
    "psycopg2==2.9.10",
    "pure-eval>=0.2.3",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pygments>=2.19.2",
    "pypdf2==3.0.1",
    "pytest==8.4.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-multipart==0.0.20",
    "requests>=2.32.5,<3",
    "s3transfer>=0.16.0",
    "sentence-transformers==5.1.0",
    "sentencepiece==0.2.1",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "soundfile==0.13.1",
    "stack-data>=0.6.3",
    "surya-ocr==0.17.0",
    "tiktoken==0.12.0",
    "tomli==2.0.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec==0.9.0",
    "torchvision>=0.24.1",
    "traitlets>=5.14.3",
    "typing-extensions>=4.15.0",
    "urllib3>=2.6.1",
    "uvicorn>=0.38.0",
    "wcwidth>=0.2.14",
    "websockets>=15.0.1",
]
